deploy/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gophprofile
  labels:
    app.kubernetes.io/name: gophprofile
